--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@types/jest": "21.1.8",
     "@types/node": "8.0.54",
     "@types/prop-types": "15.5.2",
-    "@types/react": "16.0.30",
+    "@types/react": "^16.8.1",
+    "@types/react-dom": "^16.0.11",
     "babel-loader": "^7.1.2",
     "babel-preset-buildo": "^0.1.1",
     "css-loader": "^0.28.5",
